--- a/src/component/ProductSection/style.module.css
+++ b/src/component/ProductSection/style.module.css
@@ -1,12 +1,12 @@
-.container{
+.container {
     width: 1920px;
     max-width: 100%;
     height: 1480px;
     background: rgb(0, 0, 0);
+    border: black 1px solid;
 }
 
-.txt1{
-    /* border: red solid 1px; */
+.txt1 {
     height: 29px;
     margin-top: 144px;
     font-family: 'Inter';
@@ -19,7 +19,7 @@
     color: #FFFFFF;
 }
 
-.txt2{
+.txt2 {
     height: 18px;
     margin-top: 20px;
     font-family: 'Inter';
@@ -32,7 +32,7 @@
     color: #FFFFFF;
 }
 
-.txt3{
+.txt3 {
     height: 19px;
     margin-top: 40px;
     font-family: 'Inter';
@@ -45,51 +45,80 @@
     color: #FFFFFF;
 }
 
-.txt3 span{
+.txt3 span {
     color: #1EA1F5;
 }
 
-.comicGrid{
+.comicGrid {
     width: 926px;
     height: 1052px;
     margin: 60px auto;
     display: grid;
-    
-    grid-template-areas:    
-      'p1  p1  p2'
-      'p1  p1  p2'
-      'p3  p4  p4'
-      'p3  p5  p5';
-    gap: 20px;  
+
+    grid-template-areas:
+        'p1  p1  p2'
+        'p1  p1  p2'
+        'p3  p4  p4'
+        'p3  p5  p5';
+    gap: 20px;
 }
 
-.panelItem{
+.panelItem {
     position: relative;
     border: 2px solid #FFFFFF;
     overflow: hidden;
 }
 
-.panel_1 { grid-area: p1; width: 571px;  height:461px;  background-color: #333333;}
-.panel_2 { grid-area: p2; width: 335px;  height:461px;  background-color: #262626;}
-.panel_3 { grid-area: p3; width: 335px;  height:571px;  background-color: #191919;}
-.panel_4 { grid-area: p4; width: 571px;  height:335px;  background-color: #404040;}
-.panel_5 { grid-area: p5; width: 571px;  height:216px;  background-color: #262626;}
-
-h2{
-margin: 46px 0 0 40px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 23px;
-
-letter-spacing: 0.115em;
-
-color: #FFFFFF;
+.panel_1 {
+    grid-area: p1;
+    width: 571px;
+    height: 461px;
+    background-color: #333333;
 }
 
-.panelItem div{
+.panel_2 {
+    grid-area: p2;
+    width: 335px;
+    height: 461px;
+    background-color: #262626;
+}
+
+.panel_3 {
+    grid-area: p3;
+    width: 335px;
+    height: 571px;
+    background-color: #191919;
+}
+
+.panel_4 {
+    grid-area: p4;
+    width: 571px;
+    height: 335px;
+    background-color: #404040;
+}
+
+.panel_5 {
+    grid-area: p5;
+    width: 571px;
+    height: 216px;
+    background-color: #262626;
+}
+
+h2 {
+    margin: 46px 0 0 40px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 23px;
+
+    letter-spacing: 0.115em;
+
+    color: #FFFFFF;
+}
+
+.panelItem div {
     margin: 24px 0 0 40px;
 
     font-family: 'Inter';
@@ -102,46 +131,111 @@ color: #FFFFFF;
     color: #FFFFFF;
 }
 
-.panelItem img{
+.panelItem img {
     position: absolute;
 }
 
-.panel_1 div, .panel_5 div{
+.panel_1 div,
+.panel_5 div {
     width: 491px;
 }
 
-.panel_2 div, .panel_3 div{
+.panel_2 div,
+.panel_3 div {
     width: 255px;
 }
 
-.panel_4 div{
+.panel_4 div {
     width: 237px;
 }
 
-.panel_1 img{
+.panel_1 img {
     top: 191px;
     left: 135px;
 }
 
-.panel_2 img{
+.panel_2 img {
     top: 225px;
     left: 51px;
 }
 
-.panel_3 img{
+.panel_3 img {
     top: 319px;
     left: 79px;
 }
 
-.panel_4 img{
+.panel_4 img {
     top: 110px;
     left: 317px;
 }
 
+.forSwiper {
+    width: 335px;
+    height: 520px;
+    margin-top: 60px;
+    display: none;
+}
 
 @media (max-width:541px) {
-    .panelItem{
+    .container {
+        height: 1018px;
+    }
+
+    .comicGrid{
+        display: none;
+    }
+
+    .txt1 {
+        width: 359px;
+        height: 44px;
+        font-size: 18px;
+        line-height: 22px;
+        text-align: center;
+        margin-top: 0;
+        margin: 102px auto 0 auto;
+    }
+
+    .txt2 {
+        width: 359px;
+        height: 45px;
+        font-size: 12px;
+        line-height: 15px;
+        margin-top: 0;
+        margin: 20px auto 0 auto;
+    }
+
+    .txt3 {
+        width: 360px;
+        height: 38px;
+        margin-top: 0;
+        margin: 38px auto 0 auto;
+    }
+
+    .panelItem {
         width: 335px;
         height: 461px;
+    }
+
+    h2 {
+        line-height: 23px;
+    }
+
+    .panel_1 img {
+        top: 231px;
+        left: 25px;
+    }
+
+    .panel_3 img {
+        top: 282px;
+        left: 79px;
+    }
+
+    .panel_4 img {
+        top: 251px;
+        left: 64px;
+    }
+
+    .forSwiper{
+        display: block;
     }
 }
