--- a/src/component/HomeSection/style.module.css
+++ b/src/component/HomeSection/style.module.css
@@ -1,5 +1,6 @@
 .container{
     width:1920px;
+    height: 860px;
     max-width: 100%;
     position: relative;
 }
@@ -20,19 +21,25 @@
 .bgSet{
     position: relative;
     width: 100%;
-    padding-bottom: 44.79%;
+    padding-bottom: 860px;
     background-size: cover; 
     background-position: center;  
-    background: url(../../images/home_bg_pc.jpg) no-repeat center center/100% auto;  
+    background: url(../../images/home_bg_pc.jpg) no-repeat center center/1920px auto;  
+}
+
+.logoArea{
+    width: 1400px;
+    max-width: 95%;
+    height: 48px;
+    position: absolute;
+    top: 16px;
+    left:50%;
+    transform: translateX(-50%);
 }
 
 .logo{   
-    width: 15.38vw;
-    height: 2.5vw;
-
-    position: absolute;
-    top: 0.83vw;
-    left: 13.54vw;
+    width: 295.39px;
+    height: 100%;
 
     background: url(../../images/logo.svg);
     background-size: cover; 
@@ -42,65 +49,65 @@
 
 .txtArea{
     position: absolute;
-    top: 16.66vw;
+    top: 320px;
     left:50%;
     transform: translateX(-50%);
 }
 
 .txt1{
-    height: 2.5vw;
+    height: 48px;
 
     font-family: 'Inter';
     font-style: normal;
     font-weight: 200;
-    font-size: 2.08vw;
-    line-height: 2.5vw;
+    font-size: 40px;
+    line-height: 48px;
 
     color: #000000;
 }
 
 .txt2{
-    height: 6.04vw;
+    height: 116px;
 
     font-family: 'Inter';
     font-style: italic;
     font-weight: 900;
-    font-size: 5vw;
-    line-height: 6.04vw;
+    font-size: 96px;
+    line-height: 116px;
 
     color: #1EA1F5;
 }
 
 .txt3{
-    height: 2.5vw;
+    height: 48px;
 
     font-family: 'Inter';
     font-style: normal;
     font-weight: 200;
-    font-size: 2.08vw;
-    line-height: 2.5vw;
+    font-size: 40px;
+    line-height: 48px;
     text-align: right;
 
     color: #000000;
 }
 
 .tryBtn{
-    width: 10.72vw;
-    height: 1.82vw;
+    width: 206px;
+    height: 35px;
 
     background-color: #1EA1F5;
     border-radius: 32px;
 
     position: absolute;
-    bottom: 6.51vw;
+    bottom: 185px;
     left: 50%;
     transform: translateX(-50%);    
 
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 0.83vw;
-    line-height: 0.98vw;
+    font-size: 16px;
+    line-height: 19px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -115,22 +122,25 @@
 
     .bgSet{
         width: 100%;
-        padding-bottom: 216.42%;
+        padding-bottom: 896px;
         background-size: cover; 
         background-position: center;  
-        background: url(../../images/home_bg_phone.jpg) no-repeat center center/100% auto;  
+        background: url(../../images/home_bg_phone.jpg) no-repeat center center/414px auto;  
+    }
+
+    .logoArea{
+        width: 392px;
+        max-width: 89.09%;
+        height: 24px;
+        top: 28px;
     }
 
     .logo{   
         width: 147.69px;
-        height: 24px;
-    
-        top: 28px;
-        left: 24px;
     }
 
     .txtArea{
-        top: 71.73vw;
+        top: 297px;
         width: 370px;
         max-width: 89.37%;
     }
@@ -155,7 +165,7 @@
         width: 150px;
         height: 35px;
     
-        bottom: 50.24vw; 
+        bottom: 208px; 
 
         font-size: 16px;
         line-height: 19.36px;
