--- a/src/component/Contact/style.module.css
+++ b/src/component/Contact/style.module.css
@@ -63,6 +63,11 @@ input::placeholder,textarea::placeholder{
 }
 
 .btn{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: #FFFFFF;
     margin-top: 50px;
     width: 249px;
     height: 35px;
@@ -72,6 +77,14 @@ input::placeholder,textarea::placeholder{
     justify-content: center;
     align-items: center;
     cursor: pointer;
+}
+
+.btn:hover{
+    background: #1980c1;
+}
+
+.btn:active{
+    margin-top: 52px;
 }
 
 .text{
