--- a/src/component/Footer/style.module.css
+++ b/src/component/Footer/style.module.css
@@ -21,6 +21,16 @@
     font-weight: 700;
 }
 
+.flex_row button{
+    height: 22px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    cursor: pointer;
+}
+
 @media (max-width:450px){
     .flex_row{
         width: 327px;
